--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
 }
 
 .verse-box {
+    background-color: #000;
     color: #fff;
-    font-family: inherit;
-    font-size: 25px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
     padding: 3px;
     overflow-y: scroll;
     position: absolute;
